Add profile image to profile card in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
           </p>
         </div>
         <aside class="profile-card">
-          <div class="profile-image">Add your photo</div>
+          <div class="profile-image"> 
+            <img src="1771077041604.png" alt="My Image">
+
+          </div>
           <p><strong>Location:</strong> Pune, Maharashtra, India</p>
           <p><strong>Email:</strong> ratnakardashrathyadav1228@gmail.com</p>
           <p><strong>Phone:</strong> +91 9518904616</p>
